# health-device-embedded

./: README.md
Code/: .gitignore  CMakeLists.txt  prj.conf  prj_minimal.conf
Code/inc/: bluetooth.h  imu.h
Code/src/: bluetooth.c  hr.c  imu.c  main.c
